# EasyPass

./: Dockerfile  Jenkinsfile  LICENSE  ReadMe.md  azure-pipelines.yml  docker-compose.yml  startScriptForDocker.sh
AuthService/: ReadMe.md  build.gradle.kts  cookie.txt  cookieAdmin.txt  cookieGroup.txt  cookieMWelsch.txt  cookieMwustinger.txt  cookieUser.txt  cookies.txt  gradlew
AuthService/gradle/wrapper/: gradle-wrapper.properties
AuthService/src/main/resources/: application.properties  authKeystore.p12
AuthService/src/test/resources/: test-application.properties
DiscoveryService/src/main/resources/: application.properties
WebService/: .gitignore  build.gradle.kts
WebService/src/main/app/: .babelrc  package-lock.json  package.json  webpack.config.js
WebService/src/main/app/pkg/: README.md  package.json  wasm.d.ts  wasm.js  wasm_bg.d.ts  wasm_bg.wasm
WebService/src/main/app/plugin/: package-lock.json  package.json
WebService/src/main/app/public/: backendtest.html  (+2 more)
WebService/src/main/rust/: Cargo.toml
WebService/src/main/rust/src/: lib.rs
WebService/src/main/rust/src/crypto/: asymmetric.rs  crypto.rs  hashing.rs  jni.rs  mod.rs  passwords.rs  second_fa.rs  symmetric.rs
WebService/src/main/rust/src/easypass/: connection.rs  easypass.rs  formats.rs  group_keys.rs  mod.rs  recovery.rs  service.rs  timeout.rs  worker.rs  worker_events.rs  worker_login.rs
WebService/src/main/rust/src/easypass/worker/: worker_changes.rs  worker_crud.rs  worker_events.rs  worker_group_entries.rs  worker_login.rs  worker_meta_entries.rs  worker_network.rs  worker_private_entries.rs  worker_registration.rs
WebService/src/main/rust/src/pouchdb/: mod.rs  pouchdb.rs
_azure-pipelines/: rust.yml  wasm-pack.yml
(+178 files in other folders)
